--- a/showcase/app/styles/showcase-pages/layout/flex.scss
+++ b/showcase/app/styles/showcase-pages/layout/flex.scss
@@ -23,13 +23,22 @@ body.layouts-flex {
   }
 
   .shw-layout-flex-example-tint-flex-items {
-    .hds-layout-flex > * {
-      &:nth-child(6n+1) { background-color: #e4c5f3; }
-      &:nth-child(6n+2) { background-color: #e5ffd2; }
-      &:nth-child(6n+3) { background-color: #d2f4ff; }
-      &:nth-child(6n+4) { background-color: #fff8d2; }
-      &:nth-child(6n+5) { background-color: #f3d9c5; }
-      &:nth-child(6n+6) { background-color: #fee1ec; }
+    .hds-layout-flex {
+        > * {
+        &:nth-child(6n+1) { background-color: #e4c5f3; }
+        &:nth-child(6n+2) { background-color: #e5ffd2; }
+        &:nth-child(6n+3) { background-color: #d2f4ff; }
+        &:nth-child(6n+4) { background-color: #fff8d2; }
+        &:nth-child(6n+5) { background-color: #f3d9c5; }
+        &:nth-child(6n+6) { background-color: #fee1ec; }
+      }
+
+      // We add an outline to make nested Flex items more visible
+      &:has(.hds-layout-flex),
+      &:has(.hds-layout-flex) > *,
+      .hds-layout-flex > * {
+        outline: 1px dotted var(--shw-color-gray-200);
+      }
     }
   }
 
