--- a/showcase/app/styles/showcase-pages/layout/grid.scss
+++ b/showcase/app/styles/showcase-pages/layout/grid.scss
@@ -13,13 +13,22 @@ body.layouts-grid {
   }
 
   .shw-layout-grid-example-tint-flex-items {
-    .hds-layout-grid > * {
-      &:nth-child(6n+1) { background-color: #e4c5f3; }
-      &:nth-child(6n+2) { background-color: #e5ffd2; }
-      &:nth-child(6n+3) { background-color: #d2f4ff; }
-      &:nth-child(6n+4) { background-color: #fff8d2; }
-      &:nth-child(6n+5) { background-color: #f3d9c5; }
-      &:nth-child(6n+6) { background-color: #fee1ec; }
+    .hds-layout-grid {
+      > * {
+        &:nth-child(6n+1) { background-color: #e4c5f3; }
+        &:nth-child(6n+2) { background-color: #e5ffd2; }
+        &:nth-child(6n+3) { background-color: #d2f4ff; }
+        &:nth-child(6n+4) { background-color: #fff8d2; }
+        &:nth-child(6n+5) { background-color: #f3d9c5; }
+        &:nth-child(6n+6) { background-color: #fee1ec; }
+      }
+
+      // We add an outline to make nested Grid items more visible
+      &:has(.hds-layout-grid),
+      &:has(.hds-layout-grid) > *,
+      .hds-layout-grid > * {
+        outline: 1px dotted var(--shw-color-gray-200);
+      }
     }
   }
 }
